   new find file/path/index attributes and functionalities
 - when inflating rpt key, cast id_run, position and tag index
   (if any) values to integers and raise an error if conversion
   gives a warning
 - unused tracking server features removed:
     simultaneous status update for multiple runs;
     simultaneous status update for multiple instruments;
     XML feeds for individual run statuses with listing of
       all runs at this status;
     flowcell verification;
     complex computation of width of padding id_run in run name
       for display purposes 

release 86.6
 - unused db tables, which were renamed in the previous release,
     are dropped; exclusions in teh DBIx class loader script removed
 - Jenkins daemon - a bug in locating prod ssl server certificates fixed
 - added a convenience factory class to transform rpt list strings
   into a composition

release 86.5
 - small fix in locate_runfolder for rna seqc links
 - remove unused classes for image generation
 - be compatible with ClearPress version 475.3.3 and above
 - set explicit dist to precise in travis yml
 - add dual configuration for apache mpm worker/event
 - Jenkins' daemon with HTTPS as default configuration
 - drop or rename orphaned tables from db
   - drop
     cost_code
     cost_group
     sensor_data_instrument
     sensor_data
     sensor_instrument
     sensor
     mail_run_project_followers
   - rename
     event_type_service to todrop_event_type_service
     ext_service to todrop_ext_service
     event_type_subscriber to todrop_event_type_subscriber

release 86.4
 - reference find role: remove unused 'subset' attribute and
   previously deprecated 'single_ref_found' method 
 - increate http tmeout for event notification
 - run tracking server on two ports - one accepting http traffic, another
   one https only; the same set of URLs on both ports
 - tracking web GUI link to request LIMs page now changed to point to