@@ -1,15 +1,0 @@
-[% PROCESS instrument_top.tt2
-           top_menu_index=1
--%]
-[% labels    = ['edit statuses', 'update mod', ] -%]
-[% addresses = ['instrument/edit_statuses', 'instrument_mod'] -%]
-[% counts    = [0, 1] -%]
-<p class="npgmenu2">
-[% FOREACH count IN counts -%]
-[% IF count != 0 %]&nbsp;|&nbsp;[% END -%]
-[% IF count == index -%]<font class="npgmenu2-highlighted">[% ELSE %]<a href="[% SCRIPT_NAME %]/[% addresses.$count %]">[% END -%]
-[% labels.$count -%]
-[% IF count == index %]</font>[% ELSE %]</a>[% END -%]
-[% END -%]
-</p>
-
