@@ -1,22 +1,0 @@
-
-[% PROCESS instrument_make_change_menu.tt2 
-           index=1
-%]
-
-
-[% IF model.util.requestor.is_member_of('engineers') %][% SET engineer = 1 %]<form name="instrument_batch_update" method="POST" action="[% SCRIPT_NAME %]/instrument_mod/group;update_mods">[% ELSE %][% engineer = 0 %][% END %]
-<div class="table_overflow">
-  [% PROCESS instrument_mod_table.tt2 %]
-</div>
-[% IF engineer %]
-<div style="width:60em;height:1em;text-align:right;">
-<a href="javascript:void(selectEntities('instrument'));">select all</a> | <a href="javascript:void(toggleEntities('instrument'));">toggle all</a>
-</div>
-
-<div id="mod_form">
-<fieldset style="width:58em;">
-  <legend>Batch Update Mods</legend>
-  Type: <select name="id_instrument_mod_dict" id="id_instrument_mod_dict">[% FOREACH imd = model.instrument_mod_dicts %]<option value="[% imd.id_instrument_mod_dict %]">[% imd.description %] [% imd.revision %]</option>[% END %]</select>Is Current: <input type="checkbox" name="iscurrent" value="1" checked="1" /><input type="submit" value="update instruments" onClick="document.pressed='imd_submit'" />
-</fieldset>
-</div>
-[% END %]
