@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 5;
+use Test::More tests => 3;
 use t::util;
 use t::request;
 
@@ -36,19 +36,6 @@ my $util = t::util->new({fixtures => 1,});
           });
   ok($util->test_rendered($str, 't/data/rendered/menus/instruments_status_textual.html'),
     'menu instruments>status>textual');
-}
-
-{
-  use_ok('npg::model::instrument_mod');
-  $util->requestor(q(joe_loader));
-  my $view = npg::view::instrument_mod->new({
-               util   => $util,
-               action => 'list',
-               aspect => q{},
-               model  => npg::model::instrument_mod->new({util => $util,}),
-              }); 
-  ok($util->test_rendered($view->render(), 't/data/rendered/menus/instruments_make_change_mods.html'),
-    'menu instruments>make_change>mods');
 }
 
 1;
