@@ -1,6 +1,0 @@
-Updated mods ok.
-Click <a href="/cgi-bin/npg/instrument_mod">here</a> to continue.
-
-<script type="text/javascript">
- document.location.href='/cgi-bin/npg/instrument_mod';
-</script>
