@@ -1,134 +1,0 @@
-<form name="instrument_batch_update" method="POST" action="/cgi-bin/npg/instrument_mod/group;update_mods">
-  <div class="table_overflow">
-    <table class="sortable zebra" id="instrument_mods">
-  <caption>Instrument Mods</caption>
-  <thead>
-    <tr>
-      <th>Instrument</th>
-      <th>Mode Scrambler</th>
-      <th>Objective</th>
-      <th>PE Module</th>
-      <th>Prism</th>
-      <th>Recipes</th>
-      <th>SCS</th>
-      <th>Tubing</th>
-      <th>&nbsp;</th>
-    </tr>
-  </thead>
-  <tbody><tr>
-      <td><a href="/cgi-bin/npg/instrument/3">IL1</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-  ok 4 - no croak on render for engineer
-    <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><input type="checkbox" id="id_instrument_3" class="id_instrument_checkbox" name="id_instrument" value="3" /</td>
-      
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/4">IL2</a></td>
-      <td></td>
-      <td></td>
-      <td>F</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><input type="checkbox" id="id_instrument_4" class="id_instrument_checkbox" name="id_instrument" value="4" /</td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/6">IL3</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><input type="checkbox" id="id_instrument_6" class="id_instrument_checkbox" name="id_instrument" value="6" /</td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/7">IL4</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><input type="checkbox" id="id_instrument_7" class="id_instrument_checkbox" name="id_instrument" value="7" /</td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/8">IL5</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><input type="checkbox" id="id_instrument_8" class="id_instrument_checkbox" name="id_instrument" value="8" /</td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/9">IL6</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><input type="checkbox" id="id_instrument_9" class="id_instrument_checkbox" name="id_instrument" value="9" /</td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/10">IL7</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><input type="checkbox" id="id_instrument_10" class="id_instrument_checkbox" name="id_instrument" value="10" /</td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/11">IL8</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><input type="checkbox" id="id_instrument_11" class="id_instrument_checkbox" name="id_instrument" value="11" /</td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/12">IL9</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><input type="checkbox" id="id_instrument_12" class="id_instrument_checkbox" name="id_instrument" value="12" /</td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/13">IL10</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><input type="checkbox" id="id_instrument_13" class="id_instrument_checkbox" name="id_instrument" value="13" /</td>
-    </tr>
-  </tbody>
-</table>
-</div>
-
-<div style="width:60em;height:1em;text-align:right;">
-<a href="javascript:void(selectEntities('instrument'));">select all</a> | <a href="javascript:void(toggleEntities('instrument'));">toggle all</a>
-</div>
-
-<div id="mod_form">
-<fieldset style="width:58em;">
-  <legend>Batch Update Mods</legend>
-  Type: <select name="id_instrument_mod_dict" id="id_instrument_mod_dict"><option value="10">Mode Scrambler MKIV</option><option value="8">Objective Custom</option><option value="9">Objective Lead Free</option><option value="1">PE module A</option><option value="2">PE module B</option><option value="3">PE module C</option><option value="4">PE module D</option><option value="5">PE module E</option><option value="6">PE module F</option><option value="7">Prism 67deg</option></select>Is Current: <input type="checkbox" name="iscurrent" value="1" checked="1" /><input type="submit" value="update instruments" onClick="document.pressed='imd_submit'" />
-</fieldset>
-</div>
