@@ -1,109 +1,0 @@
-<div class="table_overflow">
-    <table class="sortable zebra" id="instrument_mods">
-  <caption>Instrument Mods</caption>
-  <thead>
-    <tr>
-      <th>Instrument</th>
-      <th>Mode Scrambler</th>
-      <th>Objective</th>
-      <th>PE Module</th>
-      <th>Prism</th>
-      <th>Recipes</th>
-      <th>SCS</th>
-      <th>Tubing</th>
-    </tr>
-  </thead>
-  <tbody><tr>
-      <td><a href="/cgi-bin/npg/instrument/3">IL1</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/4">IL2</a></td>
-      <td></td>
-      <td></td>
-      <td>F</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/6">IL3</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/7">IL4</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/8">IL5</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/9">IL6</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/10">IL7</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/11">IL8</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/12">IL9</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr><tr>
-      <td><a href="/cgi-bin/npg/instrument/13">IL10</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>67deg</td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-  </tbody>
-</table>
-</div>
