@@ -1,11 +1,0 @@
-<p class="npgmenu1">
-<font class="npgmenu1-highlighted">Instruments:</font>
-<a href="/cgi-bin/npg/instrument/graphical">current status</a>
- | <a href="/cgi-bin/npg/instrument_format">formats</a>
- |  <font class="npgmenu1-highlighted">
-<a href="/cgi-bin/npg/instrument/edit_statuses">make batch change</a>
- </font>
-</p>
-
-<p class="npgmenu2">
-<a href="/cgi-bin/npg/instrument/edit_statuses">edit statuses</a>&nbsp;|&nbsp;<font class="npgmenu2-highlighted">update mod</font></p>
