@@ -13,6 +13,7 @@ LIST OF CHANGES
  - unused tracking server features removed:
      simultaneous status update for multiple runs;
      simultaneous status update for multiple instruments;
+     simultaneous mod update for multiple instruments;
      XML feeds for individual run statuses with listing of
        all runs at this status;
      flowcell verification;
